Added guide track uploads to S3 to accompany backing tracks. not debugged
